syntax = "proto3";

import "common/enums.proto";

package farmera.common;

option go_package = "github.com/farmera/grpc-protos/common";

// Pagination request parameters
message PaginationRequest {
  optional int32 page = 1;
  optional int32 limit = 2;
  optional string sort_by = 3;
  optional farmera.common.PaginationOrder order = 4;
  optional bool all = 5;
}

// Pagination response metadata
message PaginationResponse {
  int32 current_page = 1;     // Current page number
  int32 page_size = 2;        // Items per page
  int32 total_items = 3;      // Total number of items
  int32 total_pages = 4;      // Total number of pages
  bool has_next_page = 5;     // Whether there are more pages
  bool has_previous_page = 6; // Whether there are previous pages
}

message SortOption {
  string field = 1;           // Field to sort by
  SortDirection direction = 2; // Sort direction
  
  enum SortDirection {
    SORT_DIRECTION_UNSPECIFIED = 0;
    SORT_DIRECTION_ASC = 1;
    SORT_DIRECTION_DESC = 2;
  }
}

// Simple Pagination request parameters
message SimplePaginationRequest {
  optional int32 page = 1;
  optional int32 limit = 2;
}

message SimpleCursorPaginationRequest {
  optional farmera.common.PaginationOrder order = 1;
  optional int32 limit = 2;
  optional string cursor = 3;
}

message SimpleCursorPaginationResponse {
  optional string next_cursor = 1;
}